                   ----------------------------------------
                   | CHANGES of the numericalsgps package |
                   ----------------------------------------

#======
1.2.2 -> 1.2.2 dev
- Added IsAlmostCanonicalIdeal, IsNearlyGorenstein, IsGeneralizedAlmostSymmetric, IsHomogeneousNumericalSemigroup, AsNumericalDuplication, DilatationOfNumericalSemigroup, RFMatrices (by Francesco Strazzanti)
- Added new section in the chapter of factorizationas, and moved IsMpure and IsPure to this new section
- Added PseudoFrobenius, Type and FrobeniusNumber for an ideal of a numerical semigroup 
- Added IsComplementOfIntegralIdeal and IdealByDivisorClosedSet
- ViewString for affine semigroups now considers singular in a single generator or minimal generator
- Decomposition of ideals into irreducibles (by Jorge Angulo)
- NumericalSemgigroupByNuSequence and NumericalSemgigroupByTauSequence (by Jorge Angulo)

#======
1.2.1 -> 1.2.2
- Bug fix for DivisorsOfElementInNumericalSemigroup(0,s).
- Bug fix in proportionally modular affine semigroups of dimenstion two
- Added IsSubset for ideals of numerical semigroups
- Disabled GradedModules

#=======
1.2.0 -> 1.2.1
- Changes in tests to fit new version of gapdays
- Code for ideals of affine semigroups by Helena Martin Cruz

#=======
1.1.0 -> 1.2.0 * brief summary *
* This is just a summary of the changes made from the major release 1.1.0 to the major release 1.2.0.
* For details, please check the lists of changes between minor releases below.
- Many small fixes and slight improvements (both in the code and in the manual).
- Many functions added (in particular some for affine and good semigroups (especially for generalized numerical semigroups - contributions of Carmelo Cisto, and for good semigroups - contributions of Nicola Maugeri))
- Travis & Codecov support added (great help of Max Horn in this and other aspects).
- The list of contributors has increased and has been updated.