@@ -4,6 +4,7 @@
 
 #======
 1.2.2 -> 1.2.2 dev
+- Added CircuitsOfKernelCongruence
 - Added IsAlmostCanonicalIdeal, IsNearlyGorenstein, IsGeneralizedAlmostSymmetric, IsHomogeneousNumericalSemigroup, AsNumericalDuplication, DilatationOfNumericalSemigroup, RFMatrices (by Francesco Strazzanti)
 - Added new section in the chapter of factorizationas, and moved IsMpure and IsPure to this new section
 - Added PseudoFrobenius, Type and FrobeniusNumber for an ideal of a numerical semigroup 
